# TensorRT10Sharp

./: .editorconfig  .gitattributes  .gitignore  README.md  README_EN.md  build-all.bat  clean-all.bat  run_example.bat
Documentation/: BUILD_README.md  IGNORE_FILES_GUIDE.md
Managed/: README.md  README_EN.md  TensorRT10Sharp.csproj
Managed/examples/: BasicExample.cs  TensorRT10Sharp.Examples.csproj
Managed/scripts/: build.bat  clean.bat  run.bat
Managed/src/: Dims.cs  Nvinfer.cs
Native/: CMakeLists.txt  README.md  README_EN.md
Native/include/: tensorrt10_extern.h
Native/scripts/: build.bat  clean.bat
Native/src/: tensorrt10_extern.cpp
Yolo11Sharp/: README.md  README_EN.md  Yolo11Sharp.csproj
Yolo11Sharp/Examples/: Program.cs
Yolo11Sharp/Scripts/: build.bat  clean.bat  run.bat
Yolo11Sharp/src/Core/: IYolo11Inference.cs  InferenceMode.cs  Yolo11Classification.cs  Yolo11Detection.cs  Yolo11Engine.cs  Yolo11InferenceFactory.cs
Yolo11Sharp/src/Models/: ClassificationResult.cs  DetectionResult.cs  OrientedBoundingBoxResult.cs  PoseEstimationResult.cs  PreprocessResult.cs  SegmentationResult.cs
Yolo11Sharp/src/Utils/: ConfigurationManager.cs  Logger.cs
Yolo11Sharp/src/Visualization/: ImageVisualizer.cs
